<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="LoginModel"
            type="com.transparent.fleet.model.LoginModel" />

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <include
            android:id="@+id/included"
            layout="@layout/toolbar_layout" />

        <LinearLayout
            android:id="@+id/llMian"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="@dimen/_14sdp"
                android:background="@drawable/blue_round_bg"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_26sdp"
                    android:paddingTop="@dimen/_26sdp"
                    android:paddingRight="@dimen/_26sdp"
                    android:paddingBottom="@dimen/_20sdp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|center_vertical">

                        <com.transparent.fleet.util.CustomTextViewBold
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/passwordReset"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20sdp" />

                        <ImageView
                            android:id="@+id/imgClose"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            android:layout_gravity="center_vertical"
                            android:background="@drawable/ic_close" />
                    </LinearLayout>


                    <com.transparent.fleet.util.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:alpha="0.7"
                        android:text="@string/resetMsg"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <com.transparent.fleet.util.CustomTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_14sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:text="@string/userName"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <com.transparent.fleet.util.CustomEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/editbox_selected_border"
                        android:hint="@string/enterUserName"
                        android:padding="@dimen/_12sdp"
                        android:singleLine="true"
                        android:textColorHint="@color/txtHintColor" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/_26sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingRight="@dimen/_26sdp"
                    android:paddingBottom="@dimen/_20sdp">

                    <com.transparent.fleet.util.CustomTextViewBold
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_fill_border"
                        android:gravity="center"
                        android:paddingTop="@dimen/_10sdp"
                        android:paddingBottom="@dimen/_10sdp"
                        android:text="@string/changePass"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp" />

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</layout>